--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "php": ">=7.0.0",
         "roave/security-advisories": "dev-master",
         "bear/package": "^1.2.2",
-        "josegonzalez/dotenv": "^2.1"
+        "josegonzalez/dotenv": "^2.1",
+        "bear/accept": "1.x-dev"
     },
     "require-dev": {
         "bear/qatools": "^1.4.2",
